added new stuff

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         <a href="/hpc.zip"><button>HPC</button></a>
         <div style="padding: 20px;"></div>
         <a href="/dl.zip"><button>DL</button></a>
+        <div style="padding: 20px;"></div>
+        <a href="/dl-alt.zip"><button>DL-Alt</button></a>
     </div>
     
 </body>
