added the whole codes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div style="padding: 20px;"></div>
         <a href="/dl.zip"><button>DL</button></a>
         <div style="padding: 20px;"></div>
-        <a href="/dl-alt.zip"><button>DL-Alt</button></a>
+        <a href="/sem8-main.zip"><button>LP-5</button></a>
     </div>
     
 </body>
